# nlptools

./: README.md  __init__.py  pyproject.toml  sample.ipynb  setup.cfg
.github/.workflows/: python-publish.yml
.github/workflows/: python-publish.yml
morpho_anal/: simple_mecab.py
sentence_analysis/: simple_mecab.py
src/: _version.py  simple_mecab.py
src/nlptools/: __init__.py  simple_cabocha.py  simple_mecab.py  simple_scraping.py
src/nlptools/sentence_analysis/: simple_mecab.py
src/nlptools/web_scraping/: __init__.py
src/simple_mecab/: __init__.py  mecab_wrapper.py  morpheme.py
