[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-mecab"
description = "Use MeCab with simple code."
readme = "README.md"
license = {file = "LICENSE"}
authors = ["Keisuke Magara <mail@example.com>"]
urls = { source = "https://github.com/Keisuke-Magara/simple-mecab" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese"
]
requires-python = ">=3.6"
dependencies = [
    "mecab"
]
dynamic = ["version"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "version"}

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"