[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-mecab"
description = "Use MeCab with simple code."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "author1" }]
urls = { source = "https://github.com/Keisuke-Magara/simple-mecab" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese"
]
requires-python = ">=3.6"
dependencies = [
    "mecab"
]
dynamic = ["version"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}

[tool.setuptools_scm]
write_to = "src/_version.py"
# version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"