[metadata]
name = mag-nlptools
version = attr: src.nlptools.__version__
author = Keisuke Magara
description = "Useful programs for researching nlp."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url="https://github.com/Keisuke-Magara/mag-nlptools"

[options]
package_dir=
    =src
packages = find:
install_requires =
    cssselect
    lxml
    mecab
    cabocha-python
    requests

[options.packages.find]
where=src

