[metadata]
name = simple-mecab
version = 1.0.0
author = Keisuke Magara
description = "Use MeCab with simple code."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url="https://github.com/Keisuke-Magara/simple-mecab"

[options]
package_dir=
    =src
packages = find:
install_requires =
    mecab

[options.packages.find]
where=src

